--- a/deployment/dev/local/docker-compose.yaml
+++ b/deployment/dev/local/docker-compose.yaml
@@ -3,20 +3,25 @@ name: "buildflow_dev_local"
 services:
   traefik:
     image: traefik:v3.3
-    command: 
-      --entrypoints.web.address=:80
-      --api.insecure=true
-      --log.level=DEBUG
-      --providers.docker
     ports:
       - "80:80"
+      - "443:443"
       - "9000:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ../../../backend/infrastructure/traefik/certs/traefik-cert.pem:/certs/cert.pem:ro
+      - ../../../backend/infrastructure/traefik/certs/traefik-key.pem:/certs/key.pem:ro
+      - ../../../backend/infrastructure/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
     labels:
       #OAuth
       - "traefik.http.middlewares.oauth-auth.forwardauth.address=http://oauth2-proxy:4180/oauth2/auth"
       - "traefik.http.middlewares.oauth-auth.forwardauth.trustForwardHeader=true"
+
+      # Autoredirect HTTP → HTTPS
+      - "traefik.http.routers.http-catch.rule=HostRegexp(`{host:.+}`)"
+      - "traefik.http.routers.http-catch.entrypoints=web"
+      - "traefik.http.routers.http-catch.middlewares=https-redirect"
+      - "traefik.http.middlewares.https-redirect.redirectscheme.scheme=https"
 
       #CORS
       - "traefik.http.middlewares.cors.headers.accesscontrolallowheaders=*"
@@ -94,11 +99,10 @@ services:
     image: traefik/whoami
     labels:
       - traefik.enable=true
-      - traefik.http.routers.whoami.rule=Host(buildflow.api)
-      - traefik.http.routers.whoami.rule=PathPrefix(`/whoami`)
-      - traefik.http.routers.whoami.entrypoints=web
-      - traefik.http.routers.whoami.middlewares=oauth-auth
-      - traefik.http.routers.whoami.middlewares=cors
+      - traefik.http.routers.whoami.rule=Host(`buildflow.api`) && PathPrefix(`/whoami`)
+      - traefik.http.routers.whoami.entrypoints=websecure
+      - traefik.http.routers.whoami.tls=true
+      - traefik.http.routers.whoami.middlewares=oauth-auth,cors
       - traefik.http.routers.whoami.service=whoami-service
       - traefik.http.services.whoami-service.loadbalancer.server.port=80
     networks:
@@ -114,9 +118,9 @@ services:
       - keycloak-network
     labels:
       - traefik.enable=true
-      - traefik.http.routers.auth_service.rule=Host(buildflow.api)
-      - traefik.http.routers.auth_service.rule=PathPrefix(`/auth`)
-      - traefik.http.routers.auth_service.entrypoints=web
+      - traefik.http.routers.auth_service.rule=Host(`buildflow.api`) && PathPrefix(`/auth`)
+      - traefik.http.routers.auth_service.entrypoints=websecure
+      - traefik.http.routers.auth_service.tls=true
       - traefik.http.routers.auth_service.middlewares=cors
       - traefik.http.routers.auth_service.service=auth-service
       - traefik.http.services.auth-service.loadbalancer.server.port=8000
