--- a/deployment/dev/local/docker-compose.yaml
+++ b/deployment/dev/local/docker-compose.yaml
@@ -5,23 +5,14 @@ services:
     image: traefik:v3.3
     ports:
       - "80:80"
-      - "443:443"
       - "9000:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ../../../backend/infrastructure/traefik/certs/traefik-cert.pem:/certs/cert.pem:ro
-      - ../../../backend/infrastructure/traefik/certs/traefik-key.pem:/certs/key.pem:ro
       - ../../../backend/infrastructure/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
     labels:
       #OAuth
       - "traefik.http.middlewares.oauth-auth.forwardauth.address=http://oauth2-proxy:4180/oauth2/auth"
       - "traefik.http.middlewares.oauth-auth.forwardauth.trustForwardHeader=true"
-
-      # Autoredirect HTTP → HTTPS
-      - "traefik.http.routers.http-catch.rule=HostRegexp(`{host:.+}`)"
-      - "traefik.http.routers.http-catch.entrypoints=web"
-      - "traefik.http.routers.http-catch.middlewares=https-redirect"
-      - "traefik.http.middlewares.https-redirect.redirectscheme.scheme=https"
 
       #CORS
       - "traefik.http.middlewares.cors.headers.accesscontrolallowheaders=*"
@@ -100,8 +91,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.whoami.rule=Host(`buildflow.api`) && PathPrefix(`/whoami`)
-      - traefik.http.routers.whoami.entrypoints=websecure
-      - traefik.http.routers.whoami.tls=true
+      - traefik.http.routers.whoami.entrypoints=web
       - traefik.http.routers.whoami.middlewares=oauth-auth,cors
       - traefik.http.routers.whoami.service=whoami-service
       - traefik.http.services.whoami-service.loadbalancer.server.port=80
@@ -119,8 +109,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.auth_service.rule=Host(`buildflow.api`) && PathPrefix(`/auth`)
-      - traefik.http.routers.auth_service.entrypoints=websecure
-      - traefik.http.routers.auth_service.tls=true
+      - traefik.http.routers.auth_service.entrypoints=web
       - traefik.http.routers.auth_service.middlewares=cors
       - traefik.http.routers.auth_service.service=auth-service
       - traefik.http.services.auth-service.loadbalancer.server.port=8000
