New temp verificatoin link and some cors minor changes

--- a/deployment/dev/local/docker-compose.yaml
+++ b/deployment/dev/local/docker-compose.yaml
@@ -15,13 +15,11 @@ services:
       - "traefik.http.middlewares.oauth-auth.forwardauth.trustForwardHeader=true"
 
       #CORS
-      - "traefik.http.middlewares.cors.headers.accesscontrolallowheaders=*"
-      - "traefik.http.middlewares.cors.headers.accesscontrolallowheaders=Content-Type,Authorization,X-Requested-With,Origin,Accept"
-      - "traefik.http.middlewares.cors.headers.accesscontrolallowmethods=*"
-      - "traefik.http.middlewares.cors.headers.accesscontrolalloworiginlist=http://26.190.118.118,http://buildflow.api,http://localhost:3000,http://localhost:8080"
-      - "traefik.http.middlewares.cors.headers.accesscontrolallowcredentials=true"
-      - "traefik.http.middlewares.cors.headers.accesscontrolmaxage=100"
-      - "traefik.http.middlewares.cors.headers.addvaryheader=true"
+      - "traefik.http.middlewares.cors.headers.accessControlAllowOriginListRegex=^https?://[a-zA-Z0-9.-]+(:[0-9]+)?$"
+      - "traefik.http.middlewares.cors.headers.accessControlAllowMethods=GET,OPTIONS,PUT,POST,DELETE"
+      - "traefik.http.middlewares.cors.headers.accessControlAllowHeaders=Authorization,Content-Type"
+      - "traefik.http.middlewares.cors.headers.accessControlAllowCredentials=true"
+      - "traefik.http.middlewares.cors.headers.addVaryHeader=true"
     networks:
       - keycloak-network
   
