--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "4.1.1",
-    "axios": "^1.8.4",
+    "axios": "1.8.4",
     "daisyui": "5.0.12",
-    "jwt-decode": "^4.0.0",
+    "jwt-decode": "4.0.0",
     "keycloak-js": "26.1.4",
-    "mem": "^9.0.2",
+    "mem": "10.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-router-dom": "7.4.1"
@@ -31,6 +31,6 @@
     "eslint-plugin-react-refresh": "0.4.19",
     "globals": "16.0.0",
     "tailwindcss": "4.1.1",
-    "vite": "6.2.4"
+    "vite": "6.2.5"
   }
 }
