--- a/backend/infrastructure/traefik/traefik.yml
+++ b/backend/infrastructure/traefik/traefik.yml
@@ -4,6 +4,9 @@ entryPoints:
 
 providers:
   docker: {}
+  file:
+    filename: /etc/traefik/dynamic_conf.yml
+    watch: true
 
 api:
   insecure: true
