--- a/backend/services/auth_service/Dockerfile
+++ b/backend/services/auth_service/Dockerfile
@@ -1,14 +1,14 @@
-FROM python:3.11-slim
+FROM python:3.13-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-WORKDIR /app
-
 COPY ./requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY ./app ./app
+
+WORKDIR /app
 
 EXPOSE 8000
 
