--- a/backend/services/user_service/Dockerfile
+++ b/backend/services/user_service/Dockerfile
@@ -7,4 +7,6 @@ COPY ./app ./app
 
 WORKDIR /app
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
+EXPOSE 8000
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
