--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontbuildflow",
+  "name": "buildflow",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -8,40 +8,65 @@
     "cli": "node DVP.cjs",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev": "vite"
   },
   "dependencies": {
-    "@amcharts/amcharts5": "5.12.0",
-    "@react-pdf/renderer": "^4.3.0",
-    "@tailwindcss/vite": "4.1.3",
-    "axios": "1.8.4",
-    "daisyui": "5.0.19",
+    "@amcharts/amcharts5": "5.12.1",
+    "@emotion/react": "^11.14.0",
+    "@octokit/core": "6.1.5",
+    "@react-pdf/renderer": "4.3.0",
+    "@react-three/drei": "10.0.7",
+    "@react-three/fiber": "9.1.2",
+    "@react-three/postprocessing": "3.0.4",
+    "@supabase/supabase-js": "2.49.4",
+    "@tauri-apps/api": "2.5.0",
+    "@tauri-apps/cli": "2.5.0",
+    "axios": "1.9.0",
+    "daisyui": "5.0.35",
     "echarts": "5.6.0",
+    "framer-motion": "12.9.4",
+    "frappe-gantt": "^1.0.3",
+    "highlight.js": "11.11.1",
     "jwt-decode": "4.0.0",
-    "keycloak-js": "26.1.5",
+    "keycloak-js": "26.2.0",
     "konva": "9.3.20",
     "memoize": "10.1.0",
-    "motion": "12.6.5",
-    "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^5.1.91",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
+    "moment": "^2.30.1",
+    "motion": "12.9.4",
+    "pdf-lib": "1.17.1",
+    "pdfjs-dist": "5.2.133",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "5.5.0",
-    "react-pdf": "^9.2.1",
-    "react-router-dom": "7.5.0",
-    "react-zoom-pan-pinch": "3.7.0"
+    "react-modal": "^3.16.3",
+    "react-pdf": "9.2.1",
+    "react-router-dom": "7.5.3",
+    "react-scroll": "1.9.3",
+    "react-select": "^5.10.1",
+    "react-tsparticles": "2.12.2",
+    "react-zoom-pan-pinch": "3.7.0",
+    "three": "0.176.0",
+    "tsparticles-slim": "2.12.0",
+    "uuid": "11.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "9.24.0",
-    "@types/react": "19.1.1",
-    "@types/react-dom": "19.1.2",
-    "@vitejs/plugin-react-swc": "3.8.1",
-    "eslint": "9.24.0",
+    "@eslint/js": "9.25.1",
+    "@tailwindcss/vite": "4.1.5",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.3",
+    "@vitejs/plugin-react-swc": "3.9.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "9.25.1",
     "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-react-refresh": "0.4.19",
+    "eslint-plugin-react-refresh": "0.4.20",
     "globals": "16.0.0",
-    "tailwindcss": "4.1.3",
+    "json-server": "^1.0.0-beta.3",
+    "miragejs": "^0.1.48",
+    "tailwindcss": "4.1.5",
     "terser-brunch": "4.1.0",
-    "vite": "6.2.6"
+    "vite": "6.3.4"
   }
 }
