--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -65,6 +65,7 @@
     "globals": "16.0.0",
     "json-server": "^1.0.0-beta.3",
     "miragejs": "^0.1.48",
+    "msw": "^2.10.2",
     "tailwindcss": "4.1.5",
     "terser-brunch": "4.1.0",
     "vite": "6.3.4"
